@@ -243,7 +243,6 @@ void jabber_roster_parse(JabberStream *js, const char *from,
 			remove_purple_buddies(js, jid);
 		} else {
 			GSList *groups = NULL;
-			gboolean seen_empty = FALSE;
 
 			if (js->server_caps & JABBER_CAP_GOOGLE_ROSTER)
 				if (!jabber_google_roster_incoming(js, item))
@@ -252,10 +251,9 @@ void jabber_roster_parse(JabberStream *js, const char *from,
 			for(group = xmlnode_get_child(item, "group"); group; group = xmlnode_get_next_twin(group)) {
 				char *group_name = xmlnode_get_data(group);
 
-				if (!group_name && !seen_empty) {
-					group_name = g_strdup("");
-					seen_empty = TRUE;
-				}
+				if (group_name == NULL || *group_name == '\0')
+					/* Changing this string?  Look in add_purple_buddy_to_groups */
+					group_name = g_strdup(_("Buddies"));
 
 				/*
 				 * See the note in add_purple_buddy_to_groups; the core handles
